# CH592_CLion_Tamplate

./: .gitignore  .project  .template  CH592.cfg  CMakeLists.txt  README.md
APP/: app_main.c
